--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: pampam <3
 logo: /assets/img/logo.png
 description: Esta será mi página
-show_downloads: true
+show_downloads: False
 google_analytics:
 theme: jekyll-theme-minimal
 
