--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: pampam <3
+title: V. Adrian Rosales Cutipa
 logo: /assets/img/logo.png
-description: Esta será mi página
+description: Portafolio Personal
 show_downloads: False
 google_analytics:
 theme: jekyll-theme-minimal
