--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: V. Adrian Rosales Cutipa
+title: <center>V. Adrian R</center>
 logo: /assets/img/logo.png
 description: Portafolio Personal
 show_downloads: False
