--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <center>**Portafolio Personal**</center>
+title: <center><b>Portafolio Personal</b></center>
 logo: /assets/img/logo.png
 description: Portafolio Personal
 show_downloads: False
