--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: <center><b>Portafolio Personal</b></center>
+title: <center><b>Victor Rosales</b></center>
 logo: /assets/img/logo.png
-description: Portafolio Personal
+description: Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería 
+con estudios enfocados en la rama de estructuras.
 show_downloads: False
 google_analytics:
 theme: jekyll-theme-minimal
