--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ title: <center><b>Victor Rosales</b></center>
 logo: /assets/img/logo.png
 description: Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería 
 con estudios enfocados en la rama de estructuras.
-show_downloads: False
+<center> [Ver CV](/assets/files/Tohoku-Fabian-Rosales.pdf) </center>
+show_downloads: True
 google_analytics:
 theme: jekyll-theme-minimal
 
