--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <center><b>Victor Rosales</b></center>
 
-logo: /assets/img/logo.png
+logo: /assets/img/ferr1.png
 
 description: <p align="center">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería 
 con estudios enfocados en la rama de estructuras.</p> <br>
