--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <center><b>Victor Rosales</b></center>
 
 logo: /assets/img/ferr1.png
 
-description: <p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.</p> <br><center> [Ver CV](/assets/files/Tohoku-Fabian-Rosales.pdf) </center>
+description: <p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br></p>
 
 show_downloads: True
 
