--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <center><b>Victor Rosales</b></center>
 
 logo: /assets/img/photo_github2.png
 
-description: <p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br></p> <a href="assets/files/L1-Infografia.pdf">Resume</a> | <a href="https://www.linkedin.com/in/vadrianrc/">LinkedIn</a> | <a href="https://github.com/vadrianrc">GitHub</a>
+description: <p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br></p><center> <a href="assets/files/L1-Infografia.pdf">Resume</a> | <a href="https://www.linkedin.com/in/vadrianrc/">LinkedIn</a> | <a href="https://github.com/vadrianrc">GitHub</a></center>
 
 show_downloads: False
 
