--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <center><b>Victor Rosales</b></center>
 
 logo: /assets/img/photo-github.png
 
-description: <p><center><b>Estudiante de Ingeniería Civil</b></center></p><p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br></p><center> <a href="assets/files/L1-Infografia.pdf">📄Resume</a> | <a href="https://www.linkedin.com/in/vadrianrc/">LinkedIn</a> | <a href="https://github.com/vadrianrc">GitHub</a></center>
+description: <p><center><b>Estudiante de Ingeniería Civil</b></center></p><p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br></p><center> <a href="assets/files/L1-Infografia.pdf">📄Resume</a> | <a href="https://www.linkedin.com/in/vadrianrc/">LinkedIn</a> | <a href="https://github.com/vadrianrc">GitHub</a></center><span><center>Contacto</center></span><p>Teléfono:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(+51) 964066333</p>
 
 show_downloads: False
 
