--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: <center><b>Victor Rosales</b></center>
 
 logo: assets/img/photo-github-f2c.png
 
-description: <p><center><b>Practicante Pre profesional LEM UNI</b></center></p><p align="justify">Estudiante de décimo ciclo de Ingeniería Civil en la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br><center> <a href="assets/files/CV_2024.pdf">📄Resume</a> | <a href="https://www.linkedin.com/in/vadrianrc/">LinkedIn</a> | <a href="https://github.com/vadrianrc">GitHub</a> | <a href="https://www.credly.com/users/victor-adrian-rosales-cutipa">Credly</a></center></p><span><center><b>Contacto</b></center></span><p>Teléfono:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;📞 (+51) 964066333</p>Correo electrónico:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✉️ vadrianrosalescutipa@gmail.com<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✉️ victor.rosales.c@uni.pe
+description: <p><center><b>Egresado de Ingeniería Civil</b></center></p><p align="justify">Egresado de Ingeniería Civil de la Universidad Nacional de Ingeniería con estudios enfocados en la rama de estructuras.<br><center> <a href="assets/files/CV_2024.pdf">📄Resume</a> | <a href="https://www.linkedin.com/in/vadrianrc/">LinkedIn</a> | <a href="https://github.com/vadrianrc">GitHub</a> | <a href="https://www.credly.com/users/victor-adrian-rosales-cutipa">Credly</a></center></p><span><center><b>Contacto</b></center></span><p>Teléfono:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;📞 (+51) 964066333</p>Correo electrónico:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✉️ vadrianrosalescutipa@gmail.com<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✉️ victor.rosales.c@uni.pe
 
 show_downloads: False
 
